@@ -1,18 +1,16 @@
 package lyrics.linguistics;
 
-import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
 import lyrics.Logging;
 
 import javax.annotation.CheckForNull;
 import javax.annotation.Nonnull;
-import javax.annotation.concurrent.Immutable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
+import static java.lang.Integer.parseInt;
+import static lyrics.utils.Preconditions.checkArgument;
 
 /**
  * Represents a particular pronunciation of a word.
@@ -27,24 +25,26 @@ import java.util.stream.Collectors;
  * @author jbutler
  * @since July 2018
  */
-public class Pronunciation
+public record Pronunciation
+(
+    @Nonnull List<Syllable> syllables
+)
 {
     @Nonnull
-    private final ImmutableList<Syllable> m_syllables;
-
-    public Pronunciation(@Nonnull String spaceSeparatedPhonemes)
+    public static Pronunciation fromPhonemes(@Nonnull String spaceSeparatedPhonemes)
     {
         List<PhonemeWithEmphasis> phonemesWithEmphasis = Arrays.stream(spaceSeparatedPhonemes.split(" "))
-            .map(Pronunciation::_getPhonemeWithEmphasis)
-            .collect(Collectors.toList());
-        m_syllables = _computeSyllables(phonemesWithEmphasis);
+            .map(Pronunciation::_phonemeWithEmphasis)
+            .toList();
+        var syllables = _computeSyllables(phonemesWithEmphasis);
+        return new Pronunciation(syllables);
     }
 
     @Nonnull
-    private static ImmutableList<Syllable> _computeSyllables(@Nonnull List<PhonemeWithEmphasis> phonemesWithEmphasis)
+    private static List<Syllable> _computeSyllables(@Nonnull List<PhonemeWithEmphasis> phonemesWithEmphasis)
     {
-        // This Builder is in reverse order.  Reverse it after building.
-        ImmutableList.Builder<Syllable> syllables = new ImmutableList.Builder<>();
+        // This list is in reverse order.  Reverse it after building.
+        List<Syllable> syllables = new ArrayList<>();
 
         // Compute the first syllable separately.
         // Include the final consonant cluster, if it exists;
@@ -55,77 +55,71 @@ public class Pronunciation
 
         int index = phonemesWithEmphasis.size() - 1;
 
-        while (index >= 0 && !phonemesWithEmphasis.get(index).getPhoneme().isVowel())
+        while (index >= 0 && !phonemesWithEmphasis.get(index).phoneme().isVowel())
         {
-            if (phonemesWithEmphasis.get(index).getEmphasis() != null)
+            if (phonemesWithEmphasis.get(index).emphasis() != null)
             {
-                emphasis = phonemesWithEmphasis.get(index).getEmphasis();
+                emphasis = phonemesWithEmphasis.get(index).emphasis();
             }
-            phonemesInSyllable.add(phonemesWithEmphasis.get(index).getPhoneme());
+            phonemesInSyllable.add(phonemesWithEmphasis.get(index).phoneme());
             index--;
         }
-        while (index >= 0 && phonemesWithEmphasis.get(index).getPhoneme().isVowel())
+        while (index >= 0 && phonemesWithEmphasis.get(index).phoneme().isVowel())
         {
-            if (phonemesWithEmphasis.get(index).getEmphasis() != null)
+            if (phonemesWithEmphasis.get(index).emphasis() != null)
             {
                 // Handle multiple consecutive vowels
                 // Start a new syllable if the current phoneme is a vowel with emphasis and there's already an
                 // emphasis for the current syllable
                 if (emphasis != null)
                 {
-                    syllables.add(new Syllable(Lists.reverse(phonemesInSyllable), emphasis));
+                    syllables.add(new Syllable(phonemesInSyllable.reversed(), emphasis));
                     phonemesInSyllable = new ArrayList<>();
                 }
-                emphasis = phonemesWithEmphasis.get(index).getEmphasis();
+                emphasis = phonemesWithEmphasis.get(index).emphasis();
             }
-            phonemesInSyllable.add(phonemesWithEmphasis.get(index).getPhoneme());
+            phonemesInSyllable.add(phonemesWithEmphasis.get(index).phoneme());
             index--;
         }
-        while (index >= 0 && !phonemesWithEmphasis.get(index).getPhoneme().isVowel())
+        while (index >= 0 && !phonemesWithEmphasis.get(index).phoneme().isVowel())
         {
-            phonemesInSyllable.add(phonemesWithEmphasis.get(index).getPhoneme());
+            phonemesInSyllable.add(phonemesWithEmphasis.get(index).phoneme());
             index--;
         }
 
-        syllables.add(new Syllable(Lists.reverse(phonemesInSyllable), Optional.ofNullable(emphasis).orElse(Emphasis.WEAK)));
+        syllables.add(new Syllable(phonemesInSyllable.reversed(), Optional.ofNullable(emphasis).orElse(Emphasis.NO_STRESS)));
         emphasis = null;
 
         // Now find any number of (consonant-vowel) syllables.
         while (index >= 0)
         {
             phonemesInSyllable = new ArrayList<>();
-            while (index >= 0 && phonemesWithEmphasis.get(index).getPhoneme().isVowel())
+            while (index >= 0 && phonemesWithEmphasis.get(index).phoneme().isVowel())
             {
-                if (phonemesWithEmphasis.get(index).getEmphasis() != null)
+                if (phonemesWithEmphasis.get(index).emphasis() != null)
                 {
                     // Handle multiple consecutive vowels
                     // Start a new syllable if the current phoneme is a vowel with emphasis and there's already an
                     // emphasis for the current syllable
                     if (emphasis != null)
                     {
-                        syllables.add(new Syllable(Lists.reverse(phonemesInSyllable), emphasis));
+                        syllables.add(new Syllable(phonemesInSyllable.reversed(), emphasis));
                         phonemesInSyllable = new ArrayList<>();
                     }
-                    emphasis = phonemesWithEmphasis.get(index).getEmphasis();
+                    emphasis = phonemesWithEmphasis.get(index).emphasis();
                 }
-                phonemesInSyllable.add(phonemesWithEmphasis.get(index).getPhoneme());
+                phonemesInSyllable.add(phonemesWithEmphasis.get(index).phoneme());
                 index--;
             }
-            while (index >= 0 && !phonemesWithEmphasis.get(index).getPhoneme().isVowel())
+            while (index >= 0 && !phonemesWithEmphasis.get(index).phoneme().isVowel())
             {
-                phonemesInSyllable.add(phonemesWithEmphasis.get(index).getPhoneme());
+                phonemesInSyllable.add(phonemesWithEmphasis.get(index).phoneme());
                 index--;
             }
-            syllables.add(new Syllable(Lists.reverse(phonemesInSyllable), Optional.ofNullable(emphasis).orElse(Emphasis.WEAK)));
+            syllables.add(new Syllable(phonemesInSyllable.reversed(), Optional.ofNullable(emphasis).orElse(Emphasis.NO_STRESS)));
             emphasis = null;
         }
-        return syllables.build().reverse();
-    }
-
-    @Nonnull
-    public List<Syllable> getSyllables()
-    {
-        return m_syllables;
+        return syllables.reversed();
     }
 
     /**
@@ -136,9 +130,9 @@ public class Pronunciation
      *                                  or if it does not contain a phoneme value
      */
     @Nonnull
-    private static PhonemeWithEmphasis _getPhonemeWithEmphasis(@Nonnull String string)
+    private static PhonemeWithEmphasis _phonemeWithEmphasis(@Nonnull String string)
     {
-        Preconditions.checkArgument(string.matches("^[A-Z0-9]*$"));
+        checkArgument(string.matches("^[A-Z0-9]*$"));
         @CheckForNull Phoneme phoneme = Phoneme.fromString(string.replaceAll("[^A-Z]", ""));
         if (phoneme == null)
         {
@@ -149,7 +143,7 @@ public class Pronunciation
         {
             try
             {
-                emphasis = Emphasis.fromValue(Integer.valueOf(string.replaceAll("[A-Z]", "")));
+                emphasis = Emphasis.fromValue(parseInt(string.replaceAll("[A-Z]", "")));
             }
             catch (NumberFormatException e)
             {
@@ -159,30 +153,5 @@ public class Pronunciation
         return new PhonemeWithEmphasis(phoneme, emphasis);
     }
 
-    @Immutable
-    private static class PhonemeWithEmphasis
-    {
-        @Nonnull
-        private final Phoneme m_phoneme;
-        @CheckForNull
-        private final Emphasis m_emphasis;
-
-        private PhonemeWithEmphasis(@Nonnull Phoneme phoneme, @CheckForNull Emphasis emphasis)
-        {
-            m_phoneme = phoneme;
-            m_emphasis = emphasis;
-        }
-
-        @Nonnull
-        private Phoneme getPhoneme()
-        {
-            return m_phoneme;
-        }
-
-        @CheckForNull
-        private Emphasis getEmphasis()
-        {
-            return m_emphasis;
-        }
-    }
+    private record PhonemeWithEmphasis(@Nonnull Phoneme phoneme, @CheckForNull Emphasis emphasis) {}
 }
